# ResourceCompiler

./: .gitignore  CMakeLists.txt  README.md  resources-schema.json
resources/: Images.c  Images.h  Resources.h  Shaders.c  Shaders.h  images.rc.json  resources.rc.json  shaders.rc.json
src/: main.cpp  test.cpp  test.h
